syntax = "proto3";

package com.zeitwork;

option go_package="zeitwork/proto";

message ProjectCreated {
  string id = 1;
}

message DeploymentCreated {
  string id = 1;
}

message DeploymentUpdated {
  string id = 1;
}

message ImageBuildCreated {
  string id = 1;
}

message ImageBuildUpdated {
  string id = 1;
}

message DomainCreated {
  string id = 1;
}

message DomainUpdated {
  string id = 1;
}

message DeploymentInstanceCreated {
  string id = 1;
}

message DeploymentInstanceUpdated {
  string id = 1;
}

message InstanceCreated {
  string id = 1;
}

message InstanceUpdated {
  string id = 1;
}

message NodeCreated {
  string id = 1;
}

message NodeUpdated {
  string id = 1;
}

message SslCertCreated {
  string id = 1;
}

message SslCertUpdated {
  string id = 1;
}